# Wheather_App

./: README.md  event_test.py  weather_test.py
.github/workflows/: release.yml
backend/: app.py  requirements.txt
frontend/: CMakeLists.txt  Main.qml  main.cpp  mainwindow.cpp  mainwindow.h
